--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clsx": "^2.1.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
